add thread mutex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
+        "*.java": "java",
         "iostream": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "stdexcept": "cpp"
     }
 }
